--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,6 +1,6 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 15,
+  "projectStateVersion": 17,
   "summary": "Global FM / “Gracy FM Radio Live” is a web/PWA app that loads thousands of worldwide radio stations from the Radio Browser API, provides search/selection UI, and streams the selected station with a resilient HTML5 audio player. The frontend is built with React + TanStack React Query (multi-layer caching and background lazy-loading optimized for slow networks), optional authentication via Internet Computer Internet Identity, and a Motoko backend canister that implements role-based access control plus user profile/statistics endpoints used by an authenticated user dashboard. The UI includes PWA install prompting, service-worker offline caching for core assets, donation modal, bookmarking, and a fully implemented 3D space + Earth/globe scene with radio pins and supporting UI elements (header/tagline/counter/toggles), with shadcn/ui components incorporated for consistent UI primitives.",
   "architectural_notes": [
     "Frontend uses TanStack React Query as the primary async/state layer for station data and backend actor calls (query keys, staleTime/gcTime, invalidate/remove on refresh).",
@@ -20,7 +20,7 @@
     "BlinkingStars updates star sizes using Math.random() every frame, which can cause unnecessary churn/GC and non-deterministic twinkle behavior.",
     "Audio spectrum analyzer visualization is not reacting to the currently playing audio stream (no response)."
   ],
-  "isFixRequest": true,
+  "isFixRequest": false,
   "existing_features": [
     {
       "id": "IF-1",
@@ -398,6 +398,38 @@
         "REQ-15"
       ],
       "version": 1
+    },
+    {
+      "id": "feature-move-the-audiospectrumanalyzer-overlay-so-it-is-visually-centered-in-the-middle-of-the-screen-remove-any-extra-offset-that-pushes-it-downward-while-keeping-it-centered-horizontally-and-vertically-above-the-3d-scene",
+      "title": "Move the AudioSpectrumAnalyzer overlay so it is visually centered in the middle of the screen (remove any extra offset that pushes it downward), while keeping it centered horizontally and vertically above the 3D scene.",
+      "reqIds": [
+        "REQ-16"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-remove-the-centered-fm-logo-overlay-from-the-main-display-stop-rendering-the-existing-fmradiocenteroverlay-and-ensure-the-fm-logo-image-is-no-longer-shown-in-the-center-of-the-screen",
+      "title": "Remove the centered FM logo overlay from the main display (stop rendering the existing FmRadioCenterOverlay and ensure the FM logo image is no longer shown in the center of the screen).",
+      "reqIds": [
+        "REQ-17"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-a-centered-radio-tower-symbol-with-animated-signal-waves-and-place-it-directly-above-the-centered-audiospectrumanalyzer-aligned-to-the-same-center-axis",
+      "title": "Add a centered radio-tower symbol with animated signal waves and place it directly above the centered AudioSpectrumAnalyzer, aligned to the same center axis.",
+      "reqIds": [
+        "REQ-18"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-the-center-overlay-composition-in-frontend-src-app-tsx-so-the-radio-tower-symbol-and-the-audiospectrumanalyzer-are-arranged-as-a-single-centered-vertical-stack-tower-above-analyzer-and-remove-any-now-obsolete-center-overlay-code-paths",
+      "title": "Update the center-overlay composition in frontend/src/App.tsx so the radio-tower symbol and the AudioSpectrumAnalyzer are arranged as a single centered vertical stack (tower above analyzer), and remove any now-obsolete center-overlay code paths.",
+      "reqIds": [
+        "REQ-19"
+      ],
+      "version": 1
     }
   ],
   "new_feature_requests": [
@@ -426,8 +458,14 @@
       "status": "pending"
     },
     {
-      "id": "AR-6",
-      "summary": "Restore the centered FM radio symbol/sign (revert the center overlay) instead of the audio spectrum analyzer visualization.",
+      "id": "AR-7",
+      "summary": "Move the audio spectrum analyzer from the bottom to the center/middle of the screen.",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-8",
+      "summary": "Remove the FM logo and replace it with a radio tower symbol that has animated signal waves, positioned above the spectrum analyzer.",
       "reqIds": [],
       "status": "pending"
     }
